Changelog, in reverse date order. Files are named yymmdd.

From 110724, Bugfixes are listed with "--", most serious bugs first.

170403:

"shell-command". And its cousin "yank-process".

-- Fixed a bug where "backward-delete-char-untabify" didn't implement
   overwrite mode.

-- Fixed a bug where invoking "with-message" non-interactively would
   show an extra error message if the controlled command gave an
   error.

-- Fixed a bug where "scroll-up", "scroll-down", "move-to-window-
   line", "move-to-window-line-top-bottom", "shrink-window-if-larger-
   than-buffer" wouldn't work in a script when the window framing had
   already been changed in the script.

-- Fixed bugs in macro recording:

   * Forbidden "with-message" from being recorded because it won't do
     anything.

   * Memory running out could be interpreted as a default response on
     input from the echo line.

   * "blink-and-insert", "clike-blink-and-insert", "c-handle-special-
     char" and "c-handle-special-brace" recorded nonsense data when
     used with repeat counts.

-- Fixed a bug where "quit-window" avoided switching to an existing
   "*scratch*" buffer.

- There is now a version of "shell-command" from Emacs. See
  README.reference.

- Sequential interactive invocations of "backward-delete-char-
  untabify" now inhibit an undo boundary.

- When USER_MACROS is defined, "describe-bindings" with an argument
  now lists only the keys bound to macros.

- Clarified the text on "kill-whole-lines" in README.reference.

- Now "everything else" can be completed from an empty input on the
  echo line. Everything else shares a single line of recall.

- Increased input buffer for "insert" to the max length of a filename.

170316:

No new version, because of no changes. There will probably be more
irregular versions in the future.

170216:

-- Fixed a bug where you could get stuck in the "help-help" command if
   you couldn't find a defined key in the "help" keymap. Now ^G will