@@ -753,6 +753,9 @@ INT	ldeleterawback(INT n, INT kflag);
 INT	ldeleteregion(const REGION *rp, INT kflag);
 INT	ldelnewline(void);
 INT	ldelnewline_noundo(void);
+INT lduplicate(INT f, INT n);
+INT lmovedown(INT f, INT n);
+INT lmoveup(INT f, INT n);
 INT	lreplace(INT plen, char *st, INT case_exact);
 void	kdelete(void);
 INT	kinsert(INT c, INT dir);
