@@ -2,6 +2,14 @@ Changelog, in reverse date order. Files are named yymmdd.
 
 From 110724, Bugfixes are listed with "--", most serious bugs first.
 
+190113:
+"duplicate-line": no key assignments, customise in your .mg3 file
+"line-move-up": no key assigned, cusomise in .mg3 file
+"line-move-down": no key assigned, cusomise in .mg3 file
+
+180101:
+Start my development branch in github
+
 170403:
 
 "shell-command". And its cousin "yank-process".
